# tree-sitter-aindl

./: Cargo.toml  README.md  binding.gyp  grammar copy.js  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: arrays.txt  basic.txt  complex.txt  edge_cases.txt  multiline.txt
